--- a/src/app/components/rich-text-editor/rich-text-editor.component.html
+++ b/src/app/components/rich-text-editor/rich-text-editor.component.html
@@ -80,6 +80,10 @@
       <button mat-icon-button (click)="openAnyFileDialog()" [disabled]="isUploading()" matTooltip="Upload File">
         <mat-icon>attach_file</mat-icon>
       </button>
+
+      <button mat-icon-button (click)="insertLoremIpsum()" matTooltip="Insert Lorem Ipsum paragraph">
+        <mat-icon>text_snippet</mat-icon>
+      </button>
     </div>
     <div class="editor-mode-toggle">
       <mat-button-toggle-group [value]="isRichTextMode() ? 'rich' : 'markdown'">
@@ -120,7 +124,8 @@
     </div>
     } @else {
     <textarea #markdownTextarea class="markdown-content" [value]="markdownContent()"
-      (input)="onMarkdownContentChange($event)" placeholder="Start writing your article content in Markdown..." rows="20">
+      (input)="onMarkdownContentChange($event)" placeholder="Start writing your article content in Markdown..."
+      rows="20">
       </textarea>
     }
   </div>
