--- a/src/app/components/rich-text-editor/rich-text-editor.component.html
+++ b/src/app/components/rich-text-editor/rich-text-editor.component.html
@@ -124,8 +124,7 @@
     </div>
     } @else {
     <textarea #markdownTextarea class="markdown-content" [value]="markdownContent()"
-      (input)="onMarkdownContentChange($event)" placeholder="Start writing your article content in Markdown..."
-      rows="20">
+      (input)="onMarkdownContentChange($event)" placeholder="Start writing your article content in Markdown...">
       </textarea>
     }
   </div>
