--- a/src/app/components/rich-text-editor/rich-text-editor.component.scss
+++ b/src/app/components/rich-text-editor/rich-text-editor.component.scss
@@ -70,7 +70,8 @@
 
   .editor-content-area {
     flex: 1;
-    overflow-y: auto;
+    display: flex;
+    flex-direction: column;
 
     .rich-text-content {
       min-height: 400px;
@@ -149,7 +150,6 @@
 
     .markdown-content {
       width: 100%;
-      height: 100%;
       min-height: 400px;
       padding: 16px;
       border: none;
@@ -160,6 +160,8 @@
       font-family: 'JetBrains Mono', 'Fira Code', 'Monaco', 'Consolas', monospace;
       font-size: 14px;
       line-height: 1.6;
+      overflow: hidden; // Hide scrollbar since we auto-resize
+      box-sizing: border-box;
     }
   }
 
