feat: Implement media publishing feature for Nostr (NIP-68 & NIP-71)
- Added MediaPublishDialogComponent for publishing media items.
- Integrated publishing functionality in MediaDetailsComponent and MediaComponent.
- Enhanced media event building logic to comply with NIP-68 and NIP-71 standards.
- Updated UI to include publish options in media actions and dialogs.
- Created documentation for the media publishing feature, detailing implementation and usage.

--- a/src/app/pages/media/media.component.html
+++ b/src/app/pages/media/media.component.html
@@ -58,6 +58,10 @@
             Actions
           </button>
           <mat-menu #selectedActionsMenu="matMenu">
+            <button mat-menu-item (click)="publishSelected()">
+              <mat-icon>send</mat-icon>
+              <span>Publish</span>
+            </button>
             <button mat-menu-item (click)="downloadSelected()">
               <mat-icon>download</mat-icon>
               <span>Download</span>
@@ -113,6 +117,10 @@
                     <mat-icon>info</mat-icon>
                     <span>Details</span>
                   </button>
+                  <button mat-menu-item (click)="publishSingleItemFromCard(item)">
+                    <mat-icon>send</mat-icon>
+                    <span>Publish</span>
+                  </button>
                   <button mat-menu-item (click)="downloadSelected(item.sha256)">
                     <mat-icon>download</mat-icon>
                     <span>Download</span>
@@ -153,6 +161,10 @@
             Actions
           </button>
           <mat-menu #selectedActionsMenu="matMenu">
+            <button mat-menu-item (click)="publishSelected()">
+              <mat-icon>send</mat-icon>
+              <span>Publish</span>
+            </button>
             <button mat-menu-item (click)="downloadSelected()">
               <mat-icon>download</mat-icon>
               <span>Download</span>
@@ -212,6 +224,10 @@
                     <mat-icon>info</mat-icon>
                     <span>Details</span>
                   </button>
+                  <button mat-menu-item (click)="publishSingleItemFromCard(item)">
+                    <mat-icon>send</mat-icon>
+                    <span>Publish</span>
+                  </button>
                   <button mat-menu-item (click)="downloadSelected(item.sha256)">
                     <mat-icon>download</mat-icon>
                     <span>Download</span>
@@ -252,6 +268,10 @@
             Actions
           </button>
           <mat-menu #selectedActionsMenu="matMenu">
+            <button mat-menu-item (click)="publishSelected()">
+              <mat-icon>send</mat-icon>
+              <span>Publish</span>
+            </button>
             <button mat-menu-item (click)="downloadSelected()">
               <mat-icon>download</mat-icon>
               <span>Download</span>
