--- a/src/app/components/event/event.component.html
+++ b/src/app/components/event/event.component.html
@@ -399,9 +399,9 @@
     }
 
     @if (hasGeohash(targetItem.event)) {
-    <a [href]="getGeohashUrl(targetItem.event)" target="_blank" rel="noopener noreferrer" class="note-footer-right geohash-link"
-      [matTooltip]="'Location: ' + getGeohash(targetItem.event)" matTooltipPosition="below"
-      (click)="$event.stopPropagation()">
+    <a [href]="getGeohashUrl(targetItem.event)" target="_blank" rel="noopener noreferrer"
+      class="note-footer-right geohash-link" [matTooltip]="'Location: ' + getGeohash(targetItem.event)"
+      matTooltipPosition="below" (click)="$event.stopPropagation()">
       <mat-icon>location_on</mat-icon>
     </a>
     }
