feat: Enhance event component layout and add client tag for media events

--- a/src/app/components/event/event.component.html
+++ b/src/app/components/event/event.component.html
@@ -398,23 +398,22 @@
     </div>
     }
 
-    @if (hasGeohash(targetItem.event)) {
-    <a [href]="getGeohashUrl(targetItem.event)" target="_blank" rel="noopener noreferrer"
-      class="note-footer-right geohash-link" [matTooltip]="'Location: ' + getGeohash(targetItem.event)"
-      matTooltipPosition="below" (click)="$event.stopPropagation()">
-      <mat-icon>location_on</mat-icon>
-    </a>
-    }
-
-    @if (hasProofOfWork(targetItem.event)) {
-    <div class="note-footer-right pow-indicator" [matTooltip]="getProofOfWorkTooltip(targetItem.event)"
-      matTooltipPosition="below">
-      <mat-icon [class.pow-strong]="getProofOfWorkDifficulty(targetItem.event) >= 20">verified</mat-icon>
-      <span class="pow-difficulty">{{ getProofOfWorkDifficulty(targetItem.event) }}</span>
-    </div>
-    }
-
     <div class="note-footer-right hide-small footer-right-group">
+      @if (hasGeohash(targetItem.event)) {
+      <a [href]="getGeohashUrl(targetItem.event)" target="_blank" rel="noopener noreferrer" class="geohash-link"
+        [matTooltip]="'Location: ' + getGeohash(targetItem.event)" matTooltipPosition="below"
+        (click)="$event.stopPropagation()">
+        <mat-icon>location_on</mat-icon>
+      </a>
+      }
+
+      @if (hasProofOfWork(targetItem.event)) {
+      <div class="pow-indicator" [matTooltip]="getProofOfWorkTooltip(targetItem.event)" matTooltipPosition="below">
+        <mat-icon [class.pow-strong]="getProofOfWorkDifficulty(targetItem.event) >= 20">verified</mat-icon>
+        <span class="pow-difficulty">{{ getProofOfWorkDifficulty(targetItem.event) }}</span>
+      </div>
+      }
+
       @if (shouldShowClientTag() && getClientTag(targetItem.event) && getClientLogo(getClientTag(targetItem.event))) {
       <div class="client-indicator"
         [matTooltip]="'Published with ' + getClientDisplayName(getClientTag(targetItem.event))"
