--- a/src/app/pages/profile/profile-media/profile-media.component.html
+++ b/src/app/pages/profile/profile-media/profile-media.component.html
@@ -11,7 +11,7 @@
       <mat-grid-tile>
         <div class="media-item">
           <app-event [event]="mediaItem.event" appearance="plain" [navigationDisabled]="false" [hideComments]="true"
-            [showOverlay]="true">
+            [showOverlay]="true" [hideFooter]="true">
           </app-event>
         </div>
       </mat-grid-tile>
