--- a/src/app/components/event-types/photo-event.component.html
+++ b/src/app/components/event-types/photo-event.component.html
@@ -10,7 +10,8 @@
 }
 
 <div class="photo-carousel-container" (touchstart)="onTouchStart($event)" (touchend)="onTouchEnd($event)"
-  [class.clickable]="showOverlay()" (click)="showOverlay() ? openImageDialog(currentImageUrl(), currentAltText(), $event) : null">
+  [class.clickable]="showOverlay()"
+  (click)="showOverlay() ? openImageDialog(currentImageUrl(), currentAltText(), $event) : null">
   <div class="photo-carousel">
     <div class="photo-container">
       @if (currentBlurhashDataUrl()) {
@@ -19,8 +20,8 @@
       }
       <img [src]="currentImageUrl()" [alt]="currentAltText()" [title]="currentAltText()" title="{{ currentAltText() }}"
         class="photo-item main-image" loading="lazy" (load)="onImageLoad($event)"
-        (click)="!showOverlay() ? openImageDialog(currentImageUrl(), currentAltText(), $any($event)) : null" tabindex="0" role="button"
-        (keyup.enter)="openImageDialog(currentImageUrl(), currentAltText(), $any($event))"
+        (click)="!showOverlay() ? openImageDialog(currentImageUrl(), currentAltText(), $any($event)) : null"
+        tabindex="0" role="button" (keyup.enter)="openImageDialog(currentImageUrl(), currentAltText(), $any($event))"
         (keyup.space)="openImageDialog(currentImageUrl(), currentAltText(), $any($event))" />
     </div>
 
